--- a/Views/Book/Chapter1.cshtml
+++ b/Views/Book/Chapter1.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = localizer["Chapter1Title"];
+    ViewData["Title"] = localizer["Chapter1.Title"];
     //Il servizio IStringLocalizer si trova nel namespace Microsoft.Extensions.Localization
     //Quindi si dovrebbe aggiungere uno @using Microsoft.Extensions.Localization alla view /Views/Shared/_ViewImports.cshtml
 }
@@ -7,6 +7,5 @@
 
 <div>
     <h1 class="display-4">@ViewData["Title"]</h1>
-    <p>@localizer["Chapter1Text"]</p>
-    <img src="/drawing.jpg">
+    <p>@localizer["Chapter1.Text"]</p>
 </div>
