--- a/Views/Book/Chapter2.cshtml
+++ b/Views/Book/Chapter2.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = localizer["Chapter2.Title"];
     //Il servizio IStringLocalizer si trova nel namespace Microsoft.Extensions.Localization
-    //Quindi si dovrebbe aggiungere uno @using Microsoft.Extensions.Localization alla view /Views/Shared/_ViewImports.cshtml
+    //Quindi è stato aggiunto uno @using Microsoft.Extensions.Localization a /Views/Shared/_ViewImports.cshtml
 }
 @inject IStringLocalizer localizer
 
