--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     //Il servizio IStringLocalizer si trova nel namespace Microsoft.Extensions.Localization
-    //Quindi si dovrebbe aggiungere uno @using Microsoft.Extensions.Localization alla view /Views/Shared/_ViewImports.cshtml
+    //Quindi è stato aggiunto uno @using Microsoft.Extensions.Localization a /Views/Shared/_ViewImports.cshtml
 }
 @inject IStringLocalizer localizer
 <!DOCTYPE html>
