--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AspnetcoreLocalizationDemo
 @using AspnetcoreLocalizationDemo.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspnetcoreLocalizationDemo
 @using Microsoft.Extensions.Localization
